seventh attempt - bug on iphone screens only

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -200,7 +200,7 @@
     position: relative;
   }
   
-  @media only screen and (max-width: 375px) {
+  /* @media only screen and (min-width: 375px) and (max-width: 812px) {
     #main-image figcaption {
       position:absolute;
       font-size: 32px;
@@ -208,10 +208,11 @@
       
     }
     
-  }
+  } */
 
   #main-image figcaption {
-    bottom: 50%;
+    position:absolute;
+    bottom: 10%;
     font-size: 32px; 
     max-width: 45%; 
     font-weight: bold;
